<resources>
    <string name="app_name">Makenapanih</string>
    <string name="ma_text">"Another change for demonstration!"</string>
    <string name="fragment_main_text">"Main Fragment"</string>
    <string name="dummy_text">"Dummy text!"</string>

    <!--Main Fragment's Strings-->
    <string name="text_main_fragment_1">Mau Makan Apa\nHari ini?</string>
    <string name="text_btn_cari">Cari</string>

    <!--Drawer's Strings-->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <!--Navigation Fragment's Strings-->
    <string name="btn_home_text">Home</string>
    <string name="btn_random_search_text">Cari</string>
    <string name="btn_menu_text">Menu</string>
    <string name="btn_setting_text">Settings</string>
    <string name="btn_exit_text">Exit</string>


    <!--Random Search Fragment's Strings-->
    <string name="fragment_random_search_text">Fragment Random Search</string>


    <!--Menu List Fragment's Strings-->
    <string name="fragment_menu_list_text">Fragment Menu List</string>


    <!--Setting Fragment's Strings-->
    <string name="fragment_setting_text">Fragment Seting text</string>

    <!--Menu Detail Fragment's Strings-->
    <string name="tv_deskripsi_detail_text">Deskripsi</string>
    <string name="tv_tag_detail_text">Tag</string>
    <string name="tv_resep_detail_text">Resep</string>
    <string name="dummy_recipe_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus in massa tempor nec feugiat nisl. Quisque non tellus orci ac auctor augue mauris augue neque. Non tellus orci ac auctor augue mauris augue. Elementum nisi quis eleifend quam adipiscing. Sollicitudin nibh sit amet commodo nulla. Amet purus gravida quis blandit turpis cursus. Etiam tempor orci eu lobortis elementum nibh. Ultricies mi quis hendrerit dolor magna eget est lorem. Interdum varius sit amet mattis. Mauris vitae ultricies leo integer malesuada nunc vel. Sapien nec sagittis aliquam malesuada bibendum arcu. Vel fringilla est ullamcorper eget. Sed velit dignissim sodales ut eu sem integer vitae justo. Tristique magna sit amet purus gravida quis blandit. Malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel. Suspendisse ultrices gravida dictum fusce ut placerat. Diam donec adipiscing tristique risus nec. Purus sit amet luctus venenatis lectus magna fringilla urna porttitor. Enim nulla aliquet porttitor lacus luctus accumsan tortor posuere. Suspendisse ultrices gravida dictum fusce ut. Quisque sagittis purus sit amet volutpat consequat mauris nunc. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Pellentesque sit amet porttitor eget dolor. Fermentum posuere urna nec tincidunt praesent semper. Urna id volutpat lacus laoreet non curabitur gravida arcu. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Urna duis convallis convallis tellus. Vitae ultricies leo integer malesuada. Ornare arcu odio ut sem. Id donec ultrices tincidunt arcu non sodales neque sodales. At ultrices mi tempus imperdiet. Senectus et netus et malesuada. Amet consectetur adipiscing elit duis. Integer malesuada nunc vel risus commodo viverra. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Urna id volutpat lacus laoreet non. Enim sit amet venenatis urna cursus eget. Cras semper auctor neque vitae tempus. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat. Magna fringilla urna porttitor rhoncus dolor purus non enim praesent.

Adipiscing elit duis tristique sollicitudin nibh sit. Donec et odio pellentesque diam. Nulla aliquet enim tortor at auctor urna. Auctor urna nunc id cursus metus aliquam. Felis bibendum ut tristique et. Ut porttitor leo a diam. Facilisis sed odio morbi quis commodo. Vel pretium lectus quam id leo in vitae turpis massa. Diam vulputate ut pharetra sit amet. Vehicula ipsum a arcu cursus vitae congue mauris.

Faucibus interdum posuere lorem ipsum dolor. Sed odio morbi quis commodo odio aenean. Eu consequat ac felis donec. Vivamus arcu felis bibendum ut. Lorem ipsum dolor sit amet consectetur adipiscing. Amet cursus sit amet dictum sit amet. Ut etiam sit amet nisl purus in mollis. Laoreet non curabitur gravida arcu ac tortor dignissim convallis aenean. Arcu dictum varius duis at consectetur lorem donec massa sapien. Dictum sit amet justo donec enim diam. Nec ullamcorper sit amet risus nullam eget. Tempus imperdiet nulla malesuada pellentesque elit eget gravida. A lacus vestibulum sed arcu non odio euismod lacinia at. Diam in arcu cursus euismod quis viverra.</string>

    <!--Main Fragment's Strings-->
    <string name="btn_cari">Cari</string>

    <!--Add Menu's String-->
    <string name="placeholder_nama_makanan">Soto Ayam</string>
    <string name="placeholder_deksripsi">Soto ayam adalah makanan khas Indonesia yang berupa sejenis sup ayam dengan kuah yang berwarna kekuningan.</string>
    <string name="placeholder_tags">kuah kuning, asin, ayam</string>
    <string name="tv_radio_restoran">Tersedia di restoran</string>
    <string name="tv_radio_resep">Ada resep</string>

    <string name="btn_tambah_text">Tambah</string>
    <string name="btn_batal_text">Batal</string>

    <!--Edit Menu's String-->
    <string name="fragment_menu_edit_text">Edit Menu</string>
    <string name="btn_simpan_text">Simpan</string>

    <!--Delete Dialog's String-->
    <string name="delete_confirmation_text">Apakah anda ingin menghapus menu ini?</string>
    <string name="dialog_btn_yes_text">Ya</string>
    <string name="dialog_btn_cancel_text">Tidak</string>


</resources>