<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        >
        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_home_text"
            android:background="@color/colorWhite"
            android:textColor="@color/colorLightGrey"/>
        <Button
            android:id="@+id/btn_random_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_random_search_text"
            android:background="@color/colorWhite"
            android:textColor="@color/colorLightGrey"/>
        <Button
            android:id="@+id/btn_menus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu_text"
            android:background="@color/colorWhite"
            android:textColor="@color/colorLightGrey"/>
        <Button
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting_text"
            android:background="@color/colorWhite"
            android:textColor="@color/colorLightGrey"/>
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit_text"
            android:background="@color/colorWhite"
            android:textColor="@color/colorLightGrey"/>
    </LinearLayout>

</FrameLayout>