<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_delete_confirm_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/delete_confirmation_text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_nama_makanan_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/dummy_text"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btn_confirm_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_yes_text"
            android:backgroundTint="@color/colorGreen"/>

        <Button
            android:id="@+id/btn_cancel_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_cancel_text"
            android:backgroundTint="@color/colorRed"/>
    </LinearLayout>
</LinearLayout>