<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--https://www.geeksforgeeks.org/nestedscrollview-in-android-with-example/-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/ll_makanan_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="125dp">

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/tv_border"
                android:text="@string/dummy_text"
                android:textAlignment="center"
                android:textSize="25sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_makanan_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/dummy_text"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/dummy_food_image_foreground" />

                <TextView
                    android:id="@+id/tv_deskripsi_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/tv_deskripsi_detail_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_nama_makanan_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/dummy_text" />

                <TextView
                    android:id="@+id/tv_tag_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_tag_detail_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_tag_detail_child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/dummy_text" />

                <TextView
                    android:id="@+id/tv_resep_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_resep_detail_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_resep_detail_child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/dummy_recipe_text" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/ll_makanan_detail"
        android:layout_alignBottom="@id/ll_makanan_detail"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/edit_food_icon_foreground"
        android:backgroundTint="@color/colorBlue"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/ll_makanan_detail"
        android:layout_alignBottom="@id/ll_makanan_detail"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/delete_food_icon_foreground"
        android:backgroundTint="@color/colorRed"/>

</RelativeLayout>
