<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ll_makanan_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="125dp">

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/tv_border"
                android:text="@string/dummy_text"
                android:textAlignment="center"
                android:textSize="25sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_makanan_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/dummy_text"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/dummy_food_image_foreground" />

                <TextView
                    android:id="@+id/tv_deskripsi_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/tv_deskripsi_detail_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_deskripsi_detail_child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/dummy_text" />

                <TextView
                    android:id="@+id/tv_tag_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_tag_detail_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_tag_detail_child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/dummy_text" />

                <TextView
                    android:id="@+id/tv_resep_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_resep_detail_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_resep_detail_child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/dummy_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="125dp"
                android:layout_marginBottom="125dp">
                <Button
                    android:id="@+id/btn_new_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cari menu lain"
                    android:backgroundTint="@color/colorBlue"/>
            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</RelativeLayout>